Последние доработки: кроссбраузерность и прочее

--- a/source/photo.html
+++ b/source/photo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/picturefill.js"></script>
+    <script src="js/picturefill.js"></script>
   </head>
   <body>
     <header class="page-header">
@@ -244,7 +244,7 @@
           <div class="upload__block">
             <div class="upload__block-wrapper">
               <div class="upload__toggles">
-                <button class="upload__filter upload__filter--crop" type="button">
+                <button class="upload__filter upload__filter--crop upload__filter--active" type="button">
                   <span class="visually-hidden">Кадрирование</span>
                     <svg x="0px" y="0px" width="48px" height="48px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
                       <path fill="none" d="M0,0h48v48H0V0z"/>
@@ -373,7 +373,7 @@
         </a>
       </div>
     </footer>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/svgxuse.js" defer></script>
+    <script src="js/script.js"></script>
+    <script src="js/svgxuse.js" defer></script>
   </body>
 </html>
