--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="js/picturefill.js"></script>
+    <script src="js/picturefill.js"></script>
   </head>
   <body>
     <header class="page-header">
@@ -417,7 +417,7 @@
         </a>
       </div>
     </footer>
-    <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/svgxuse.js" defer></script>
+    <script src="js/script.js"></script>
+    <script src="js/svgxuse.js" defer></script>
   </body>
 </html>
