--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>Pink: Главная страница</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.js"></script>
   </head>
   <body>
