Удалила лишние элементы slider

--- a/source/index.html
+++ b/source/index.html
@@ -197,14 +197,14 @@
           <input type="radio" id="btn-1" name="toggl" checked>
           <input type="radio" id="btn-2" name="toggl">
           <input type="radio" id="btn-3" name="toggl">
-          <div class="reviews__list slider__list">
+          <div class="reviews__list">
             <div class="reviews__list-arrow reviews__list-arrow-left">
               <span class="visually-hidden">Предыдущий отзыв</span>
               <svg class="reviews__list-arrow-icon">
                 <use xlink:href="img/sprite.svg#icon-review-arrow-left"></use>
               </svg>
             </div>
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item">
               <span class="reviews__age">25 лет, водитель трамвая</span>
               <cite class="reviews__author">Николай Петров</cite>
               <p class="reviews__text">
@@ -216,7 +216,7 @@
                 фотографии!<span class="reviews__hidden">»</span>
               </p>
             </blockquote>
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item">
               <span class="reviews__age">45 лет, прапорщик</span>
               <cite class="reviews__author">Василий Задов</cite>
               <p class="reviews__text">
@@ -228,7 +228,7 @@
                 фотографии!<span class="reviews__hidden">»</span>
               </p>
             </blockquote>
-            <blockquote class="reviews__item slider__item">
+            <blockquote class="reviews__item">
               <span class="reviews__age">31 год, розовая фея</span>
               <cite class="reviews__author">Ольга Зубова</cite>
               <p class="reviews__text">
@@ -260,7 +260,7 @@
           <input type="radio" id="btn-11" name="toggle">
           <input type="radio" id="btn-22" name="toggle" checked>
           <input type="radio" id="btn-33" name="toggle">
-          <table class="price__list slider__list">
+          <table class="price__list">
             <tr class="price__head-row">
               <th class="price__item--empty">
               </th>
